--- a/msft-prediction.ipynb
+++ b/msft-prediction.ipynb
@@ -1,17 +1,163 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "yUajF0zx2Noq"
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# dataset @ https://finance.yahoo.com/quote/MSFT/history/\n",
+    "This Jupyter Notebook is a machine learning project focused on predicting Microsoft (MSFT) stock prices using historical data. Here's a breakdown of what the notebook is doing and how:\n",
     "\n",
-    "# If you want the exact same dataset as the YouTube video,\n",
-    "# use this link: https://drive.google.com/file/d/1WLm1AEYgU28Nk4lY4zNkGPSctdImbhJI/view?usp=sharing"
+    "---\n",
+    "\n",
+    "### **1. Data Loading and Preprocessing**\n",
+    "- **Loading Data**:\n",
+    "  ```python\n",
+    "  df = pd.read_csv('MSFT.csv')\n",
+    "  ```\n",
+    "  The notebook loads historical stock price data from a CSV file (`MSFT.csv`).\n",
+    "\n",
+    "- **Selecting Relevant Columns**:\n",
+    "  ```python\n",
+    "  df = df[['Date', 'Close']]\n",
+    "  ```\n",
+    "  It keeps only the `Date` and `Close` columns, as these are the relevant features for the prediction task.\n",
+    "\n",
+    "- **Converting Dates**:\n",
+    "  ```python\n",
+    "  def str_to_datetime(s):\n",
+    "      ...\n",
+    "  df['Date'] = df['Date'].apply(str_to_datetime)\n",
+    "  ```\n",
+    "  A custom function converts the `Date` column from strings to Python `datetime` objects for easier manipulation.\n",
+    "\n",
+    "- **Setting the Index**:\n",
+    "  ```python\n",
+    "  df.index = df.pop('Date')\n",
+    "  ```\n",
+    "  The `Date` column is set as the DataFrame index, making it easier to work with time-series data.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **2. Data Visualization**\n",
+    "- **Plotting Stock Prices**:\n",
+    "  ```python\n",
+    "  plt.plot(df.index, df['Close'])\n",
+    "  ```\n",
+    "  The notebook visualizes the stock prices over time to understand trends and patterns.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **3. Windowing the Data**\n",
+    "- **Creating Sliding Windows**:\n",
+    "  ```python\n",
+    "  def df_to_windowed_df(dataframe, first_date_str, last_date_str, n=3):\n",
+    "      ...\n",
+    "  windowed_df = df_to_windowed_df(df, '2021-03-25', '2022-03-23', n=3)\n",
+    "  ```\n",
+    "  A function generates sliding windows of size `n` (default 3) from the stock price data. Each window contains `n` previous prices as input (`X`) and the next price as the target (`Y`).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **4. Preparing Data for Machine Learning**\n",
+    "- **Converting to Arrays**:\n",
+    "  ```python\n",
+    "  def windowed_df_to_date_X_y(windowed_dataframe):\n",
+    "      ...\n",
+    "  dates, X, y = windowed_df_to_date_X_y(windowed_df)\n",
+    "  ```\n",
+    "  The windowed DataFrame is converted into NumPy arrays for training. The function returns:\n",
+    "  - `dates`: The target dates.\n",
+    "  - `X`: The input features (sliding windows).\n",
+    "  - `y`: The target values (next stock prices).\n",
+    "\n",
+    "- **Splitting Data**:\n",
+    "  ```python\n",
+    "  dates_train, X_train, y_train = dates[:q_80], X[:q_80], y[:q_80]\n",
+    "  dates_val, X_val, y_val = dates[q_80:q_90], X[q_80:q_90], y[q_80:q_90]\n",
+    "  dates_test, X_test, y_test = dates[q_90:], X[q_90:], y[q_90:]\n",
+    "  ```\n",
+    "  The data is split into training, validation, and testing sets using an 80-10-10 split.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **5. Building and Training the Model**\n",
+    "- **Defining the Model**:\n",
+    "  ```python\n",
+    "  model = Sequential([\n",
+    "      layers.Input((3, 1)),\n",
+    "      layers.LSTM(64),\n",
+    "      layers.Dense(32, activation='relu'),\n",
+    "      layers.Dense(32, activation='relu'),\n",
+    "      layers.Dense(1)\n",
+    "  ])\n",
+    "  ```\n",
+    "  A Sequential model is built using TensorFlow/Keras. It consists of:\n",
+    "  - An input layer for 3 time steps.\n",
+    "  - An LSTM layer with 64 units for sequence modeling.\n",
+    "  - Two dense layers with 32 units and ReLU activation.\n",
+    "  - A final dense layer for regression output.\n",
+    "\n",
+    "- **Compiling the Model**:\n",
+    "  ```python\n",
+    "  model.compile(loss='mse', optimizer=Adam(learning_rate=0.001), metrics=['mean_absolute_error'])\n",
+    "  ```\n",
+    "  The model uses Mean Squared Error (MSE) as the loss function and Adam optimizer for training.\n",
+    "\n",
+    "- **Training the Model**:\n",
+    "  ```python\n",
+    "  model.fit(X_train, y_train, validation_data=(X_val, y_val), epochs=100)\n",
+    "  ```\n",
+    "  The model is trained for 100 epochs using the training and validation data.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **6. Evaluating the Model**\n",
+    "- **Making Predictions**:\n",
+    "  ```python\n",
+    "  train_predictions = model.predict(X_train).flatten()\n",
+    "  val_predictions = model.predict(X_val).flatten()\n",
+    "  test_predictions = model.predict(X_test).flatten()\n",
+    "  ```\n",
+    "  Predictions are made for the training, validation, and testing sets.\n",
+    "\n",
+    "- **Visualizing Predictions**:\n",
+    "  ```python\n",
+    "  plt.plot(dates_train, train_predictions)\n",
+    "  plt.plot(dates_train, y_train)\n",
+    "  ...\n",
+    "  ```\n",
+    "  The notebook plots the predictions against the actual stock prices for each dataset (training, validation, testing).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **7. Recursive Predictions**\n",
+    "- **Generating Recursive Predictions**:\n",
+    "  ```python\n",
+    "  for target_date in recursive_dates:\n",
+    "      ...\n",
+    "      next_prediction = model.predict(np.array([last_window])).flatten()\n",
+    "      recursive_predictions.append(next_prediction)\n",
+    "  ```\n",
+    "  The notebook generates recursive predictions by using the model's output as input for the next prediction.\n",
+    "\n",
+    "- **Visualizing Recursive Predictions**:\n",
+    "  ```python\n",
+    "  plt.plot(recursive_dates, recursive_predictions)\n",
+    "  ```\n",
+    "  Recursive predictions are plotted alongside the actual stock prices.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Summary**\n",
+    "This notebook implements a time-series forecasting pipeline for stock prices:\n",
+    "1. Loads and preprocesses historical data.\n",
+    "2. Creates sliding windows for supervised learning.\n",
+    "3. Trains an LSTM-based neural network to predict future prices.\n",
+    "4. Evaluates the model's performance on training, validation, and testing sets.\n",
+    "5. Generates recursive predictions for extended forecasting.\n",
+    "\n",
+    "The notebook uses Python libraries like `pandas`, `numpy`, `matplotlib`, and `tensorflow.keras` to accomplish these tasks.\n",
+    "\n",
+    "Similar code found with 1 license type"
    ]
   },
   {
